--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.11",
     "@reduxjs/toolkit": "^1.9.2",
-    "apexcharts": "^3.37.0",
+    "apexcharts": "^3.49.1",
     "async-mutex": "^0.4.0",
+    "chart.js": "^4.4.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
+    "react-apexcharts": "^1.4.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.43.1",
