--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^6.9.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.43.1",
