--- a/client/package.json
+++ b/client/package.json
@@ -9,19 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@hookform/resolvers": "^2.9.11",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/pickers": "^3.3.11",
     "@reduxjs/toolkit": "^1.9.2",
     "apexcharts": "^3.49.1",
     "async-mutex": "^0.4.0",
     "chart.js": "^4.4.3",
+    "echarts": "^5.5.0",
+    "echarts-for-react": "^3.0.2",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "react": "^18.2.0",
+    "react": "^17.0.2",
     "react-apexcharts": "^1.4.1",
     "react-chartjs-2": "^5.2.0",
-
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-hook-form": "^7.43.1",
