--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,6 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
-  
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
@@ -17,6 +16,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "apexcharts": "^3.49.1",
     "async-mutex": "^0.4.0",
+    "bootstrap": "^5.3.3",
     "chart.js": "^4.4.3",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
@@ -24,6 +24,7 @@
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.1",
+    "react-bootstrap": "^2.10.2",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
@@ -34,6 +35,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1",
     "react-select": "^5.7.0",
+    "reactstrap": "^9.2.2",
     "sweetalert2": "^11.6.13",
     "yup": "^1.0.0"
   },
