--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "chart.js": "^4.4.3",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
+    "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
     "react": "^18.2.0",
